feat: add JSON event parsing and improve window transparency handling
- Add JSON library include path to CMake configuration
- Include vector and JSON headers in source files
- Add getDataPath method to Config class
- Refactor window creation to conditionally apply WS_EX_TRANSPARENT style
- Replace manual JSON parsing with nlohmann/json library
- Improve file watcher thread shutdown with proper synchronization
- Remove redundant window style modification after creation

--- a/overlay-windows/CMakeLists.txt
+++ b/overlay-windows/CMakeLists.txt
@@ -29,6 +29,7 @@ set(RESOURCES
 )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_executable(CalendarOverlay ${SOURCES} ${HEADERS} ${RESOURCES})
+target_include_directories(CalendarOverlay PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/json)
 target_link_libraries(CalendarOverlay
     d2d1
     dwrite
