feat(build): refactor CMakeLists for Windows overlay app
- Simplify Windows SDK detection and remove hardcoded paths
- Use modern CMake target-based approach for includes, definitions, and libraries
- Update Windows target version to 0x0A00 (Windows 10/11)
- Add UNICODE and _UNICODE definitions for proper Unicode support
- Improve resource compiler configuration and output directory structure
- Add MSVC-specific compiler options for standards compliance
- Reorganize file structure with clear section comments for maintainability

--- a/overlay-windows/CMakeLists.txt
+++ b/overlay-windows/CMakeLists.txt
@@ -1,35 +1,12 @@
 cmake_minimum_required(VERSION 3.15)
-project(CalendarOverlay)
+project(CalendarOverlay LANGUAGES CXX RC)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-if(WIN32)
-    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
-    # Add Windows definitions to prevent macro conflicts
-    add_definitions(-D NOMINMAX -D WIN32_LEAN_AND_MEAN -D _WIN32_WINNT=0x0601 -D WINVER=0x0601 -D NTDDI_VERSION=0x06010000 -D _WIN32_IE=0x0600 -D _NO_SAL)
-    if(MINGW)
-        set(CMAKE_RC_COMPILER_INIT windres)
-        add_definitions(-D _M_IX86 -D _NO_ASM -D __NO_ASM -D _NO_INLINE_ASM)
-    endif()
-    if(MSVC)
-        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-    endif()
-    enable_language(RC)
-    # Find Windows SDK - use version 10.0.19041.0 for compatibility
-    set(WINDOWS_SDK_DIR "C:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0")
-    if(NOT EXISTS ${WINDOWS_SDK_DIR})
-        # Fallback to latest
-        file(GLOB SDK_VERSIONS "C:/Program Files (x86)/Windows Kits/10/Include/*")
-        list(SORT SDK_VERSIONS)
-        list(REVERSE SDK_VERSIONS)
-        if(SDK_VERSIONS)
-            list(GET SDK_VERSIONS 0 WINDOWS_SDK_DIR)
-        endif()
-    endif()
-    message(STATUS "Windows SDK directory: ${WINDOWS_SDK_DIR}")
-    include_directories(${WINDOWS_SDK_DIR}/um ${WINDOWS_SDK_DIR}/shared ${WINDOWS_SDK_DIR}/winrt)
-endif()
 
+# --------------------
+# Sources
+# --------------------
 set(SOURCES
     src/main.cpp
     src/desktop_window.cpp
@@ -37,6 +14,7 @@ set(SOURCES
     src/event_manager.cpp
     src/config.cpp
 )
+
 set(HEADERS
     include/shared/calendar_shared.h
     src/desktop_window.h
@@ -45,23 +23,120 @@ set(HEADERS
     src/config.h
     src/resource.h
 )
+
 set(RESOURCES
     src/resources/calendar.rc
 )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
-add_executable(CalendarOverlay ${SOURCES} ${HEADERS} ${RESOURCES})
-target_include_directories(CalendarOverlay PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/json)
-target_link_libraries(CalendarOverlay
+
+# --------------------
+# Executable (GUI app)
+# --------------------
+add_executable(CalendarOverlay
+    ${SOURCES}
+    ${RESOURCES}
+)
+
+# Remove WIN32 if you don't need subsystem:Windows (use CONSOLE for console app)
+# WIN32 creates a Windows GUI application (no console window)
+set_target_properties(CalendarOverlay PROPERTIES
+    WIN32_EXECUTABLE TRUE  # Creates GUI app (subsystem:Windows)
+    # Or use this for console app:
+    # WIN32_EXECUTABLE FALSE  # Creates console app (subsystem:Console)
+)
+
+# --------------------
+# Include paths
+# --------------------
+target_include_directories(CalendarOverlay PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/json
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+# --------------------
+# Windows compile definitions
+# --------------------
+target_compile_definitions(CalendarOverlay PRIVATE
+    NOMINMAX
+    WIN32_LEAN_AND_MEAN
+    _WIN32_WINNT=0x0A00  # Windows 10/11 (was 0x0601 for Win7)
+    UNICODE
+    _UNICODE
+)
+
+# --------------------
+# MSVC runtime (static CRT) - FIXED SYNTAX
+# --------------------
+if(MSVC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+    
+    # Additional MSVC-specific settings
+    add_compile_options(
+        "$<$<CXX_COMPILER_ID:MSVC>:/permissive->"  # Strict standards compliance
+        "$<$<CXX_COMPILER_ID:MSVC>:/Zc:__cplusplus>"  # Enable updated __cplusplus macro
+    )
+endif()
+
+# --------------------
+# Link Windows system libraries
+# --------------------
+target_link_libraries(CalendarOverlay PRIVATE
+    user32
+    gdi32
+    ole32
+    shell32
+    comctl32
     d2d1
     dwrite
     windowscodecs
-    comctl32
-    shell32
-    ole32
-    user32
-    gdi32
+    # Add these commonly needed libs:
+    advapi32
+    uuid
 )
+
+# --------------------
+# Resource compiler settings
+# --------------------
+if(MSVC)
+    # Set resource compiler include directories
+    set_source_files_properties(${RESOURCES} PROPERTIES
+        COMPILE_FLAGS "/I${CMAKE_CURRENT_SOURCE_DIR}/src"
+    )
+endif()
+
+# --------------------
+# Debug/Release configurations
+# --------------------
+# Set different settings for Debug vs Release
+target_compile_definitions(CalendarOverlay PRIVATE
+    $<$<CONFIG:Debug>:_DEBUG>
+    $<$<CONFIG:Release>:NDEBUG>
+)
+
+# --------------------
+# Output configuration
+# --------------------
+set_target_properties(CalendarOverlay PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/Debug
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/Release
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
+)
+
+# --------------------
+# Install
+# --------------------
 install(TARGETS CalendarOverlay
     RUNTIME DESTINATION bin
-    BUNDLE DESTINATION bin
+    CONFIGURATIONS Release  # Only install Release builds
+)
+
+# --------------------
+# Optional: Post-build copy for dependencies
+# --------------------
+# If you need to copy DLLs or other files after build
+add_custom_command(TARGET CalendarOverlay POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/bin/$<CONFIG>
+    COMMENT "Creating output directory"
 )
