--- a/.gitignore
+++ b/.gitignore
@@ -276,6 +276,7 @@ calendar.json
 tasks.json
 steps.txt
 icon.png
-.vscode/launch.json
-.vscode/c_cpp_properties.json
-.vscode/settings.json
+overlay-windows/.vscode/launch.json
+overlay-windows/.vscode/c_cpp_properties.json
+overlay-windows/.vscode/settings.json
+build_nmake
