chore: update gitignore and refactor Java launcher with improved error handling
- Add .vscode/settings.json to gitignore to exclude IDE-specific settings
- Update VSCode settings to disable Swift sourcekit-lsp for better performance
- Refactor JavaLauncher.swift with comprehensive documentation and improved structure
- Enhance Java detection and launch logic with better error handling and user feedback
- Remove commented-out code and implement proper Java availability checks
- Add alert notifications for Java runtime and application not found scenarios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "C:/Users/rjian/Desktop/desktop-calendar-tracking/overlay-windows"
+    "cmake.sourceDirectory": "C:/Users/rjian/Desktop/desktop-calendar-tracking/overlay-windows",
+    "swift.sourcekit-lsp.disable": true
 }
