feat: add audio player support with Windows Media libraries
- Add audio_player.cpp to CMakeLists.txt sources
- Link wmp.lib, winmm.lib, and dsound.lib for audio functionality
- Include audio_player.h in calendar_render.h for integration
- Enable audio playback capabilities in the calendar overlay

--- a/overlay-windows/CMakeLists.txt
+++ b/overlay-windows/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
     src/calendar_render.cpp
     src/event_manager.cpp
     src/config.cpp
+    src/audio_player.cpp
 )
 
 set(HEADERS
@@ -99,6 +100,9 @@ target_link_libraries(CalendarOverlay PRIVATE
     # Add these commonly needed libs:
     advapi32
     uuid
+    wmp.lib
+    winmm.lib
+    dsound.lib
 )
 
 # --------------------
