feat(audio): migrate from Windows Media Player to Media Foundation API
- Replace WMP-based audio playback with Media Foundation for improved compatibility and modern Windows support
- Update CMakeLists.txt to link against Media Foundation libraries (mf, mfplat, mfreadwrite, mfuuid)
- Rewrite audio_player.cpp to use IMFMediaSession, IMFSourceReader, and IMFTopology
- Remove deprecated wmp.lib dependency and add necessary Media Foundation pragma comments
- Implement proper COM initialization and cleanup with CoInitializeEx/MFStartup

--- a/overlay-windows/CMakeLists.txt
+++ b/overlay-windows/CMakeLists.txt
@@ -100,9 +100,13 @@ target_link_libraries(CalendarOverlay PRIVATE
     # Add these commonly needed libs:
     advapi32
     uuid
-    wmp.lib
     winmm.lib
     dsound.lib
+    strmiids.lib
+    mf.lib
+    mfplat.lib
+    mfreadwrite.lib
+    mfuuid.lib
 )
 
 # --------------------
