--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cmake.sourceDirectory": "C:/Users/rjian/Desktop/desktop-calendar-tracking/overlay-windows",
-    "swift.sourcekit-lsp.disable": true
+    "swift.sourcekit-lsp.disable": true,
+    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx8G -Xms100m -Xlog:disable"
 }
